# gmail-archivist

./: .gitignore  README.md  archive_messages.py  pyproject.toml  requirements.txt  setup.py
