[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-archivist"
version = "0.1.0"
description = "A Python tool to automatically archive old Gmail messages while preserving starred conversations"
readme = "README.md"
authors = [{name = "Andrew Guo"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Email",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.108.0",
    "click>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/andrewguo5/gmail-archivist"
Repository = "https://github.com/andrewguo5/gmail-archivist"
Issues = "https://github.com/andrewguo5/gmail-archivist/issues"

[project.scripts]
gmail-archivist = "archive_messages:main"
